// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar favorites action - behavior should cap display at MAX when number exceeds maximum 1`] = `
<FavoritesIconBadge
  favoritesCount={9999}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <ForwardRef
    align="inherit"
    className="sg-141s9fq-root theme__tab-bar__favorites-icon-badge theme__badge"
    color="initial"
    component="div"
    display="initial"
    gutterBottom={false}
    noWrap={false}
    paragraph={false}
    variant="caption"
    variantMapping={
      {
        "body1": "p",
        "body2": "p",
        "h1": "h1",
        "h2": "h2",
        "h3": "h3",
        "h4": "h4",
        "h5": "h5",
        "h6": "h6",
        "subtitle1": "h6",
        "subtitle2": "h6",
      }
    }
  >
    <div
      className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-2rsbku-Typography-root-Typography-caption-root"
    >
      999+
    </div>
  </ForwardRef>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action - behavior should show count when number is changed 1`] = `
<FavoritesIconBadge
  favoritesCount={99}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <ForwardRef
    align="inherit"
    className="sg-141s9fq-root theme__tab-bar__favorites-icon-badge theme__badge"
    color="initial"
    component="div"
    display="initial"
    gutterBottom={false}
    noWrap={false}
    paragraph={false}
    variant="caption"
    variantMapping={
      {
        "body1": "p",
        "body2": "p",
        "h1": "h1",
        "h2": "h2",
        "h3": "h3",
        "h4": "h4",
        "h5": "h5",
        "h6": "h6",
        "subtitle1": "h6",
        "subtitle2": "h6",
      }
    }
  >
    <div
      className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-2rsbku-Typography-root-Typography-caption-root"
    >
      99
    </div>
  </ForwardRef>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action should render exact number 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <WithWidgetSettings(Connect(FavoritesIconBadge))>
    <Connect(FavoritesIconBadge)
      widgetSettings={{}}
    >
      <FavoritesIconBadge
        dispatch={[Function]}
        favoritesCount={1}
        showWishlistItemsCountBadge={true}
        widgetSettings={{}}
      >
        <ForwardRef
          align="inherit"
          className="sg-141s9fq-root theme__tab-bar__favorites-icon-badge theme__badge"
          color="initial"
          component="div"
          display="initial"
          gutterBottom={false}
          noWrap={false}
          paragraph={false}
          variant="caption"
          variantMapping={
            {
              "body1": "p",
              "body2": "p",
              "h1": "h1",
              "h2": "h2",
              "h3": "h3",
              "h4": "h4",
              "h5": "h5",
              "h6": "h6",
              "subtitle1": "h6",
              "subtitle2": "h6",
            }
          }
        >
          <div
            className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-2rsbku-Typography-root-Typography-caption-root"
          >
            1
          </div>
        </ForwardRef>
      </FavoritesIconBadge>
    </Connect(FavoritesIconBadge)>
  </WithWidgetSettings(Connect(FavoritesIconBadge))>
</Provider>
`;
